Unreviewed, drop logging landed by mistake with 255679@main https://bugs.webkit.org/show_bug.cgi?id=246704 rdar://101303904

* Source/WebCore/css/typedom/CSSNumericValue.cpp:
(WebCore::CSSNumericValue::toSum):

Canonical link: https://commits.webkit.org/255692@main